EKS/Deployment_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: default
spec:
  selector:
    matchLabels:
      run: app2
  replicas: 2
    strategy:
      type: RollingUpdate
  template:
    metadata:
      labels:
        run: app2
    spec:
      containers:
      - image: tc-moneyfy/apache4ingress:2.0
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests: 
            cpu: 50m 
            memory: 50Mi
        name: app1
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 2
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 1
            httpGet:
              host:
              scheme: HTTP
              path: /web
              httpHeaders:
                - name: Host
                  value: tatacapitalmoneyfy.com
              port: 80
