EKS/Deployment_3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: default
spec:
  selector:
    matchLabels:
      run: app3
  template:
    metadata:
      labels:
        run: app3
    spec:
      containers:
      - image: tc-moneyfy/apache4ingress:3.0
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests: 
            cpu: 50m 
            memory: 50Mi
        name: app1
        ports:
        - containerPort: 30251
          protocol: TCP
