EKS/k8s_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 3app-ingress
  labels:
    app: my-docker-apps
  annotations:
spec:
  rules:
    host: tatacapitalmoneyfy.com
  - http:
      paths:
      - path: /customer/login
        backend:
          serviceName: app2
          servicePort: 80
      - path: /
        backend:
          serviceName: app1
          servicePort: 80
